--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,8 @@
+title: "aspectj"
+description: ""
+
+url: "https://mnote.github.io/aspectj"
+#url: "http://localhost:4000"
+
+
 theme: jekyll-theme-cayman
