--- a/pom.xml
+++ b/pom.xml
@@ -127,9 +127,21 @@
         -->
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.17.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.17.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
@@ -222,7 +234,7 @@
                         <id>weaving-classes</id>
                         <!-- Compile and weave aspects after all classes compiled by javac -->
                         <goals>
-                            <!-- use this goal to weave all your classes -->
+                            <!-- use this goal to weave all your main classes -->
                             <goal>compile</goal>
                         </goals>
                         <configuration>
@@ -261,6 +273,20 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <includes>
+                        <include>io/github/mnote/agent/*</include>
+                    </includes>
+                    <archive>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+                </configuration>
             </plugin>
 
             <plugin>
