--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
         -->
 
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.3.17.RELEASE</version>
